[package]
name = "snapgenda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
oauth2 = "4.4.2"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde  = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
